--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,37 +2,39 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+    // border-top: 5px solid $grey-color-dark;
+    // border-bottom: 1px solid $grey-color-light;
+    min-height: 40px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
 }
 
 .site-title {
-    font-size: 26px;
-    line-height: 56px;
+    color: white;
+    font-size: 20px;
+    // line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: white;
     }
 }
 
 .site-nav {
     float: right;
-    line-height: 56px;
+    line-height: 30px;
 
     .menu-icon {
         display: none;
     }
 
     .page-link {
-        color: $text-color;
+        // color: $text-color;
+        color: white;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
