--- a/css/main.scss
+++ b/css/main.scss
@@ -67,3 +67,11 @@ $on-laptop:        800px;
   }
   margin-bottom: 100px;
 }
+
+.site-header {
+  background-color: black;
+  min-height: 30px;
+  height: 30px;
+}
+
+
