--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,12 +14,11 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
+        <a class="page-link" href="{{ '/portfolio.html' | prepend: site.baseurl }}">Portfolio</a>
         <a class="page-link" href="{{ '/primer.html' | prepend: site.baseurl }}">Primer</a>
+        <a class="page-link" href="{{ '/templates.html' | prepend: site.baseurl }}">Templates</a>
+        <a class="page-link" href="{{ '/pages.html' | prepend: site.baseurl }}">Pages</a>
+        <a class="page-link" href="{{ '/about.html' | prepend: site.baseurl }}">About</a>
       </div>
     </nav>
 
