--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,5 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.4.1/holder.js"></script>
+  <script src="{{ '/js/bootstrap.js' | prepend: site.baseurl | prepend: site.url  }}"></script>
 </head>
